--- a/index.html
+++ b/index.html
@@ -123,11 +123,17 @@
         <div class="swiper-scrollbar"></div>
       </div>
 
-      <div class="]card">
+      <div class="card">
+        <!-- 1 linha -->
         <div class="card__descricao">
+         <!-- 1 coluna -->
           <div class="descricao">
             <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
           </div>
+         <!-- 2 coluna -->
+    <img src="img/Angular.png" class="descricao__imagem">
         </div>
       </div>
     
