--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
          <!-- 2 coluna -->
     <img src="img/Angular.png" class="descricao__imagem">
         </div>
+
+         <!-- 2 linha -->
+          <div class="card__botoes">
+            <!-- 1 coluna -->
+            <ul class="botoes">
+              <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+              <li class="botoes__item"><img src="img/Compras.svg" alt="Adioionar no carrinho"></li>
+            </ul>
+            <!-- 2 coluna -->
+           <a href="#" class="botoes__ancora">Saiba mais</a>  
+          </div>
+
+
+
       </div>
     
     </section>
