--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <!-- 1 coluna -->
             <ul class="botoes">
               <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-              <li class="botoes__item"><img src="img/Compras.svg" alt="Adioionar no carrinho"></li>
+              <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho"></li>
             </ul>
             <!-- 2 coluna -->
            <a href="#" class="botoes__ancora">Saiba mais</a>  
